--- a/configs/em300_defconfig
+++ b/configs/em300_defconfig
@@ -16,7 +16,7 @@ CONFIG_AUTOBOOT_KEYED=y
 CONFIG_AUTOBOOT_STOP_STR="c"
 CONFIG_CMD_CONFIG=y
 CONFIG_CMD_BOOTZ=y
-CONFIG_CMD_BOOTEFI=y
+# CONFIG_CMD_BOOTEFI=y
 # CONFIG_CMD_FLASH is not set
 # CONFIG_CMD_IMI is not set
 # CONFIG_CMD_IMLS is not set
@@ -38,3 +38,4 @@ CONFIG_CMD_FAT=y
 CONFIG_CMD_FS_GENERIC=y
 CONFIG_MMC_MXS=y
 CONFIG_OF_LIBFDT=y
+CONFIG_CMD_NET=y
