defconfig: set CONFIG_CMD_BOOTEFI - build errors without CONFIG_CMD_BOOTEFI
Signed-off-by: Christoph Krutz <christoph.krutz@tq-group.com>

--- a/configs/em300_defconfig
+++ b/configs/em300_defconfig
@@ -16,7 +16,7 @@ CONFIG_AUTOBOOT_KEYED=y
 CONFIG_AUTOBOOT_STOP_STR="c"
 CONFIG_CMD_CONFIG=y
 CONFIG_CMD_BOOTZ=y
-# CONFIG_CMD_BOOTEFI=y
+CONFIG_CMD_BOOTEFI=y
 # CONFIG_CMD_FLASH is not set
 # CONFIG_CMD_IMI is not set
 # CONFIG_CMD_IMLS is not set
